--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ It is free to use; however, it is also very much a work in progress and therefor
 
 </div>
 <div id="footer">
-			<a href="#" id="about">About</a> - <a href="https://pythonadventures.readthedocs.io/en/latest/" id="docs" target="_blank">Documentation</a>
+			<a href="#" id="about">About</a> - <a href="https://github.com/armbennett/PythonAdventures" id="docs" target="_blank">Source</a>
 </div>
 			<div id='sounds'></div>
 	</div>
